changed to previous site

--- a/index.html
+++ b/index.html
@@ -1,8 +1,75 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p></p>
-<h1>8====D :O  -- matt</h1>
-</body>
-</html>
+<div class="selected">
+  <img src="">
+</div>
+<div class="intro">
+  <div class="nameLinks">
+    <div class="name">
+      <div class="nameInner">nick chamberlin</div>
+    </div>
+    <br>
+    <!-- <hr> -->
+    <br>
+    <ul class="socialLinks">
+      <a class="dribbble" href="http://www.dribbble.com/nickchamberlin">
+        <li>dribbble</li>
+      </a>
+      <a class="twitter" href="http://www.twitter.com/nickchamberlin">
+        <li>twitter</li>
+      </a>
+      <a class="facebook" href="https://www.facebook.com/nicktheandroid">
+        <li>facebook</li>
+      </a>
+      <a class="google" href="http://www.google.com/+nickchamberlin">
+        <li>google</li>
+      </a>
+    </ul>
+  </div>
+  <nav>
+    <ul>
+      <a href="https://dl.dropboxusercontent.com/u/7353877/illustrations.html">
+        <li>illustrations</li>
+      </a>
+      <a href="http://jsfiddle.net/draft" class="blog">
+        <li>blog</li>
+      </a>
+    </ul>
+  </nav>
+</div>
+
+
+
+
+
+
+
+
+
+<div class="hidden">
+  <script type="text/javascript">
+    <!--//--><![CDATA[//><!--
+    var images = new Array()
+
+    function preload() {
+      for (i = 0; i < preload.arguments.length; i++) {
+        images[i] = new Image()
+        images[i].src = preload.arguments[i]
+      }
+    }
+    preload(
+        "http://bit.ly/1KRVKtH",
+        "http://bit.ly/1sJTYoP",
+        "http://bit.ly/1sJUcfp",
+        "http://bit.ly/1Gdi2Xh",
+        "http://bit.ly/1E9Mpch",
+        "http://bit.ly/1DMRCJN",
+        "http://bit.ly/1ubLGqJ",
+        "http://bit.ly/1znT0Rf",
+        "http://bit.ly/158KN79",
+        "http://bit.ly/1sJUQtv",
+        "http://bit.ly/1yuoTEO",
+        "http://bit.ly/1ITqs1L"
+      )
+      //--><!]]>
+
+  </script>
+</div>
