--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<script src="js.js"></script>
+		<link rel="stylesheet" type="text/css" href="css.css">
+	</head>
+	<body>
+
+	</body>
+</html>
+
+
 <div class="selected">
   <img src="">
 </div>
