--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<script src="js.js"></script>
 		<link rel="stylesheet" type="text/css" href="css.css">
+		<script   src="http://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+		<script src="js.js"></script>
+
 	</head>
 	<body>
 
