fixed header to nick cham.com

--- a/illustrations.html
+++ b/illustrations.html
@@ -11,7 +11,6 @@
 
 
 
-  <link rel="stylesheet" type="text/css" href="http://jsfiddle.net/css/result-light.css">
 
 
       <script type='text/javascript' src="http://css-tricks.com/examples/HorzScrolling/jquery.mousewheel.js"></script>
@@ -197,7 +196,7 @@ $( ".name" ).hover(
     <br>
 <div class="name">
 
-    <a href="http://jsfiddle.net/draft"> nick chamberlin </a>
+    <a href="http://nickchamberlin.com"> nick chamberlin </a>
 </div>
 
 <div class="wrapper">
