illustration no html.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <nav>
     <ul>
-      <a href="illustrations.html">
+      <a href="illustrations">
         <li>illustrations</li>
       </a>
       <a href="http://jsfiddle.net/draft" class="blog">
