edit out social links

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       <a class="twitter" href="http://www.twitter.com/nickchamberlin">
         <li>twitter</li>
       </a>
-      <a class="facebook" href="https://www.facebook.com/nicktheandroid">
+      <!-- <a class="facebook" href="https://www.facebook.com/nicktheandroid">
         <li>facebook</li>
-      </a>
-      <a class="google" href="http://www.google.com/+nickchamberlin">
+      </a> -->
+      <!-- <a class="google" href="http://www.google.com/+nickchamberlin">
         <li>google</li>
-      </a>
+      </a> -->
     </ul>
   </div>
   <nav>
