--- a/index.html
+++ b/index.html
@@ -2,88 +2,71 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>nickchamberlin</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
 		<link rel="stylesheet" type="text/css" href="css.css">
-		<!--<script   src="http://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>-->
 		<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"
 		<script src="js.js"></script>
-
 	</head>
+
 	<body>
-
-	</body>
-</html>
-
-
-<div class="selected">
-  <img src="">
-</div>
-<div class="intro">
-  <div class="nameLinks">
-    <div class="name">
-      <div class="nameInner">nick chamberlin</div>
+    <div class="selected">
+      <img src="">
     </div>
-    <br>
-    <!-- <hr> -->
-    <br>
-    <ul class="socialLinks">
-      <a class="dribbble" href="http://www.dribbble.com/nickchamberlin">
-        <li>dribbble</li>
-      </a>
-      <a class="twitter" href="http://www.twitter.com/nickchamberlin">
-        <li>twitter</li>
-      </a>
-      <a class="facebook" href="https://github.com/NickChamberlin">
-        <li>github</li>
-      </a>
-    </ul>
-  </div>
-  <nav>
-    <ul>
-      <a href="illustrations">
-        <li>illustrations</li>
-      </a>
-      <a href="http://jsfiddle.net/draft" class="blog">
-        <li>blog</li>
-      </a>
-    </ul>
-  </nav>
-</div>
+    <div class="intro">
+
+        <div class="name">
+          <div class="nameInner">nick chamberlin</div>
+        </div>
+      <div class="nameLinks">
+        <ul class="socialLinks">
+          <a class="dribbble" href="http://www.dribbble.com/nickchamberlin">
+            <li>dribbble</li>
+          </a>
+          <a class="twitter" href="http://www.twitter.com/nickchamberlin">
+            <li>twitter</li>
+          </a>
+          <a class="facebook" href="https://github.com/nickchamberlin">
+            <li>github</li>
+          </a>
+        </ul>
+      </div>
+      <nav>
+        <ul>
+          <a href="mailto:nicholaschamberlin@gmail.com">Email</a>
+        </ul>
+      </nav>
+    </div>
 
 
 
-<div>test</div>
+    <div class="hidden">
+      <script type="text/javascript">
+        var images = new Array()
 
+        function preload() {
+          for (i = 0; i < preload.arguments.length; i++) {
+            images[i] = new Image()
+            images[i].src = preload.arguments[i]
+          }
+        }
+        preload(
+            "http://bit.ly/1KRVKtH",
+            "http://bit.ly/1sJTYoP",
+            "http://bit.ly/1sJUcfp",
+            "http://bit.ly/1Gdi2Xh",
+            "http://bit.ly/1E9Mpch",
+            "http://bit.ly/1DMRCJN",
+            "http://bit.ly/1ubLGqJ",
+            "http://bit.ly/1znT0Rf",
+            "http://bit.ly/158KN79",
+            "http://bit.ly/1sJUQtv",
+            "http://bit.ly/1yuoTEO",
+            "http://bit.ly/1ITqs1L"
+          )
 
+      </script>
+    </div>
 
-
-
-<div class="hidden">
-  <script type="text/javascript">
-    <!--//--><![CDATA[//><!--
-    var images = new Array()
-
-    function preload() {
-      for (i = 0; i < preload.arguments.length; i++) {
-        images[i] = new Image()
-        images[i].src = preload.arguments[i]
-      }
-    }
-    preload(
-        "http://bit.ly/1KRVKtH",
-        "http://bit.ly/1sJTYoP",
-        "http://bit.ly/1sJUcfp",
-        "http://bit.ly/1Gdi2Xh",
-        "http://bit.ly/1E9Mpch",
-        "http://bit.ly/1DMRCJN",
-        "http://bit.ly/1ubLGqJ",
-        "http://bit.ly/1znT0Rf",
-        "http://bit.ly/158KN79",
-        "http://bit.ly/1sJUQtv",
-        "http://bit.ly/1yuoTEO",
-        "http://bit.ly/1ITqs1L"
-      )
-      //--><!]]>
-
-  </script>
-</div>
+</body>
+</html>
