--- a/index.html
+++ b/index.html
@@ -5,68 +5,29 @@
 		<title>nickchamberlin</title>
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
 		<link rel="stylesheet" type="text/css" href="css.css">
-		<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.js"
-		<script src="js.js"></script>
 	</head>
-
 	<body>
-    <div class="selected">
-      <img src="">
-    </div>
-    <div class="intro">
 
-        <div class="name">
-          <div class="nameInner">nick chamberlin</div>
-        </div>
-      <div class="nameLinks">
-        <ul class="socialLinks">
-          <a class="dribbble" href="http://www.dribbble.com/nickchamberlin">
-            <li>dribbble</li>
-          </a>
-          <a class="twitter" href="http://www.twitter.com/nickchamberlin">
-            <li>twitter</li>
-          </a>
-          <a class="facebook" href="https://github.com/nickchamberlin">
-            <li>github</li>
-          </a>
-        </ul>
-      </div>
+
+    <main>
+
+      <header>nick chamberlin</header>
+
       <nav>
-        <ul>
-          <a href="mailto:nicholaschamberlin@gmail.com">Email</a>
-        </ul>
+        <a href="http://www.dribbble.com/nickchamberlin">dribbble</a>
+        <a href="http://www.twitter.com/nickchamberlin">twitter</a>
+        <a href="https://github.com/nickchamberlin">github</a>
       </nav>
-    </div>
+
+    </main>
 
 
+    <footer>
 
-    <div class="hidden">
-      <script type="text/javascript">
-        var images = new Array()
+      <a href="mailto:nicholaschamberlin@gmail.com">email</a>
 
-        function preload() {
-          for (i = 0; i < preload.arguments.length; i++) {
-            images[i] = new Image()
-            images[i].src = preload.arguments[i]
-          }
-        }
-        preload(
-            "http://bit.ly/1KRVKtH",
-            "http://bit.ly/1sJTYoP",
-            "http://bit.ly/1sJUcfp",
-            "http://bit.ly/1Gdi2Xh",
-            "http://bit.ly/1E9Mpch",
-            "http://bit.ly/1DMRCJN",
-            "http://bit.ly/1ubLGqJ",
-            "http://bit.ly/1znT0Rf",
-            "http://bit.ly/158KN79",
-            "http://bit.ly/1sJUQtv",
-            "http://bit.ly/1yuoTEO",
-            "http://bit.ly/1ITqs1L"
-          )
+    </footer>
 
-      </script>
-    </div>
 
 </body>
 </html>
