--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>nickchamberlin</title>
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" type="text/css" href="css.css">
 	</head>
 	<body>
