--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="theme-color" content="#13D0A8">
 		<title>nickchamberlin</title>
     <link rel="icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" type="text/css" href="css.css">
